# PlanarGS

./: .gitignore  Dockerfile  README.md  docker-compose.yml  eval_preprocess.py  eval_recon.py  pyproject.toml  render.py  run_geomprior.py  run_lp3.py  train.py
lp3/: mask_refine.py
planar/: co_planar.py
scene/: dataset_readers.py
scripts/: eval_preprocess.py  eval_recon.py  metrics.py  render.py  rerun_viewer.py  run_geomprior.py  run_lp3.py  run_planargs.py  train.py  viser_viewer.py
src/dust3r/: model.py  patch_embed.py
src/dust3r/heads/: dpt_head.py
src/dust3r/utils/: path_to_croco.py
src/planargs/: __init__.py
src/planargs/arguments/: __init__.py
src/planargs/common_utils/: camera_utils.py  general_utils.py  graphics_utils.py  loss_utils.py  rotation_utils.py  sh_utils.py
src/planargs/gaussian_renderer/: __init__.py  network_gui.py
src/planargs/geomprior/: align_opt.py  dataloader.py  regreader_utils.py  run_dust3r.py
src/planargs/lp3/: __init__.py  box_migrate.py  color_cluster.py  mask_refine.py  run_groundedsam.py
src/planargs/planar/: __init__.py  co_planar.py  cull_mesh.py  densify_points.py  training_report.py  visualize.py
src/planargs/scene/: __init__.py  cameras.py  colmap_loader.py  dataset_readers.py  gaussian_model.py  ply_loader.py
src/planargs_croco_models/: __init__.py  croco.py  pos_embed.py
submodules/dust3r/dust3r/: model.py
submodules/dust3r/dust3r_visloc/: localization.py
