[build-system]
requires = ["setuptools>=77", "packaging>=24.2"]
build-backend = "setuptools.build_meta"

[project]
name = "planargs"
version = "0.1.0"
description = "PlanarGS: High-Fidelity Indoor 3D Gaussian Splatting guided by planar priors"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [{ name = "SJTU-ViSYS-team" }]

# NOTE:
# - Avoid submodule/path-based dependencies here.
# - Let pip resolve dependencies from indexes (PyPI / custom indexes).
# - Keep GPU/torch/CUDA-coupled packages optional to avoid accidental CPU installs.
dependencies = [
  "roma",
  "gradio",
  "matplotlib",
  "opencv-python",
  "scipy",
  "einops",
  "trimesh",
  "tensorboard",
  "plyfile",
  "open3d",
  "lpips",
  "transformers",
  "yapf",
  "pycocotools",
  "timm",
  "viser",
  "nerfview>=0.1.3",
  "splines>=0.3.3",
  "jaxtyping>=0.3.7",
]

[project.optional-dependencies]
# Runtime dependencies that are strongly coupled to CUDA/torch ABI.
# Users should install these with the correct CUDA wheel index (or conda) for their environment.
torch = [
  "torch",
  "torchvision",
  "torchaudio",
]

# Third-party CUDA/C++ extensions (often need to be built against the currently installed torch).
# Keeping them optional prevents pip from trying to build/install them automatically in mismatched envs.
extensions = [
  "simple-knn",
  "diff-plane-rasterization",
]

# PyTorch3D distribution varies by platform/CUDA.
# Keeping it optional avoids frequent install failures.
pytorch3d = [
  "pytorch3d",
]

# Convenience meta-extra for a typical full install.
# Users can do: pip install "planargs[full]"
full = [
  "planargs[torch]",
  "planargs[extensions]",
  "planargs[pytorch3d]",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["planargs", "planargs.*"]

# -----------------------------
# Optional: uv-specific settings
# -----------------------------
# NOTE:
# - Keep uv settings, but do NOT pin submodules via tool.uv.sources.
# - This file should remain pip-friendly even without uv.
[tool.uv.pip]
extra-index-url = ["https://download.pytorch.org/whl/cu128"]
