[build-system]
requires = ["setuptools>=77", "packaging>=24.2"]
build-backend = "setuptools.build_meta"

[project]
name = "planargs"
version = "0.1.0"
description = "PlanarGS: High-Fidelity Indoor 3D Gaussian Splatting guided by planar priors"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [{ name = "SJTU-ViSYS-team" }]

# NOTE:
# - Do NOT use submodule/path-based dependencies here.
# - Keep dependencies as normal package requirements.
# - The top-level project (e.g., polaris_real2sim) will pin sources via uv.
dependencies = [
  # Torch stack (must be installed with the correct CUDA wheels by the top-level installer)
  "torch",
  "torchvision",
  "torchaudio",

  # Core python deps
  "roma",
  "gradio",
  "matplotlib",
  "opencv-python",
  "scipy",
  "einops",
  "trimesh",
  "tensorboard",
  "plyfile",
  "open3d",
  "lpips",
  "transformers",
  "yapf",
  "pycocotools",
  "timm",
  "viser",
  "nerfview>=0.1.3",
  "splines>=0.3.3",
  "jaxtyping>=0.3.7",

  # CUDA/C++ extensions (source pinned by the top-level project via uv)
  "simple-knn",
  "diff-plane-rasterization",

  # Optional but commonly used; top-level project should pin source/wheels
  "pytorch3d",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["planargs", "planargs.*"]
