[build-system]
requires = ["setuptools>=77", "packaging>=24.2"]
build-backend = "setuptools.build_meta"

[project]
name = "planargs"
version = "0.1.0"
description = "PlanarGS: High-Fidelity Indoor 3D Gaussian Splatting guided by planar priors"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [{ name = "SJTU-ViSYS-team" }]

dependencies = [
  # Torch stack (install with the matching CUDA wheels in user environment)
  "torch",
  "torchvision",
  "torchaudio",

  # Core python deps
  "roma",
  "gradio",
  "tqdm",
  "matplotlib",
  "opencv-python",
  "scipy",
  "einops",
  "trimesh",
  "pyglet<2",
  "huggingface-hub[torch]>=0.22",
  "tensorboard",
  "plyfile",
  "open3d",
  "lpips",
  "transformers",
  "yapf",
  "pycocotools",
  "timm",
  "viser",
  "nerfview>=0.1.3",
  "splines>=0.3.3",
  "jaxtyping>=0.3.7",
  "groundingdino-py>=0.4.0",
  "segment-anything>=1.0",

  # CUDA/C++ extensions (resolved via uv local sources)
  "simple-knn",
  "diff-plane-rasterization",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "planargs",
  "planargs.*",
  "dust3r",
  "dust3r.*",
  "planargs_croco_models",
  "planargs_croco_models.*",
]

[tool.uv.sources]
diff-plane-rasterization = { path = "third_party/diff-plane-rasterization", editable = true }
simple-knn = { path = "third_party/simple-knn", editable = true }

[tool.uv.extra-build-dependencies]
diff-plane-rasterization = ["torch"]
simple-knn = ["torch"]
